--- a/app/views/users/list.scala.html
+++ b/app/views/users/list.scala.html
@@ -6,8 +6,8 @@
 		<div class="list-group">
 			@for(user<-users){
 				<h4 class="list-group-item-heading"><a href=@routes.Users.show(user.id:Long) class="list-group-item"> 
-					@(user.name) @if(!user.isActive){
-					<p class="text-danger" style="display:inline; float:right">(Заблокирован)!</p>
+					@(user.name), ID: @user.id @if(!user.isActive){
+					<p class="text-danger" style="display:inline; float:right">(Заблокирован!)</p>
 				}</a></h4>
 		
 			}
