search alg improved, user search implemented

--- a/app/views/bookings/searchform.scala.html
+++ b/app/views/bookings/searchform.scala.html
@@ -4,7 +4,7 @@
 	<div class="container">
 		@helper.form(action= routes.Bookings.findProc, 'role->"form", 'class->"form-horizontal"){
 			<div class="input-group">
-				<input type="search" class="form-control" name="valToSearch" id="valToSearch" autofocus>
+				<input type="search" class="form-control" name="valToSearch" id="valToSearch" placeholder="Поиск" autofocus>
 				<span class="input-group-btn">
 					<button class="btn btn-default" type="submit">Поиск</button>
 				</span>
