--- a/app/views/events/details.scala.html
+++ b/app/views/events/details.scala.html
@@ -12,7 +12,7 @@
 			</ul>
 		</div>}
 		<div class="jumbotron">
-			<h1>@(event.tp+" "+event.name)</h1>
+			<h1>@(event.name)</h1>
 			<h2>@(Dates.dateTimeFormat.format(event.date))</h2>
 			<p>@event.dscr</p>
 		</div>
