--- a/app/views/events/prices.scala.html
+++ b/app/views/events/prices.scala.html
@@ -8,7 +8,7 @@
 		@helper.form(action= routes.Seats.savePrices(id), 'role->"form", 'class->"form-inline"){
 			<div class="col-md-3">
 				@for(n<-(0 to 8)){
-						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Имя"){ (id, name, value, args) =>
+						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Название"){ (id, name, value, args) =>
 	   						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 	   					}
 						@helper.input(pricesForm("prices" +"["+n+"]"), '_class ->"form-group",'_label->"Цена"){ (id, name, value, args) =>
@@ -18,7 +18,7 @@
 			</div>
 			<div class="col-md-3">
 				@for(n<-(9 to 17)){
-						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Имя"){ (id, name, value, args) =>
+						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Название"){ (id, name, value, args) =>
 	   						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 	   					}
 						@helper.input(pricesForm("prices"+"["+n+"]"), '_class ->"form-group",'_label->"Цена"){ (id, name, value, args) =>
@@ -28,7 +28,7 @@
 			</div>
 			<div class="col-md-3">
 				@for(n<-(18 to 26)){
-						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Имя"){ (id, name, value, args) =>
+						@helper.input(pricesForm("names"+"["+n+"]"), '_class ->"form-group",'_label->"Название"){ (id, name, value, args) =>
 	   						<input type="text" value="@value" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
 	   					}
 						@helper.input(pricesForm("prices"+"["+n+"]"), '_class ->"form-group",'_label->"Цена"){ (id, name, value, args) =>
