--- a/app/views/helpers/bootstrapform.scala.html
+++ b/app/views/helpers/bootstrapform.scala.html
@@ -4,17 +4,17 @@
 @import views.html.helper._
 
 <div class="@elements.args.get('_class).getOrElse("form-group") @if(elements.errors.nonEmpty){has-error has-feedback}">
-	<label for="@elements.id" class="control-label col-sm-1">
+	<label for="@elements.id" class="control-label">
 		@elements.label(elements.lang)
 	</label>
-	<div class="col-sm-10">
+	<div class="input">
 	@elements.input
 	</div>
-</div>
-	<span class="help-block col-sm-15">
+		<span class="help-block">
 		@if(elements.errors.nonEmpty){
 			@elements.errors(elements.lang).mkString(", ")
 		}else {
 			@elements.infos(elements.lang).mkString(", ")
 		}
 	</span>
+</div>
