--- a/app/views/events/eventForm.scala.html
+++ b/app/views/events/eventForm.scala.html
@@ -3,25 +3,24 @@
 	
 	@import views.helpers.bootstrap._
 	
-	@helper.input(eventForm("name"), '_label -> Messages("name"), '_class ->"form-group") { (id, name, value, args) =>
-    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите название события">
-	}
-
-	@helper.input(eventForm("date.date"), '_label -> Messages("date"), '_class ->"form-group"){ (id, name, value, args) =>
-    <input type="date" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
+	
+	@helper.input(eventForm("name"), '_label -> Messages("name"), '_class ->"form-group",'_showConstraints->false) { (id, name, value, args) =>
+    	<input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите название события">
 	}
 	
-	@helper.input(eventForm("date.time"), '_label -> Messages("time"), '_class ->"form-group"){ (id, name, value, args) =>
-    <input type="time" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
+	@helper.input(eventForm("date.date"), '_label -> Messages("date"), '_class ->"form-group",'_showConstraints->false){ (id, name, value, args) =>
+		    <input type="date" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control form-narrow">
 	}
-
- 	@helper.input(eventForm("bookingExpTime"), '_label -> "Бронирования истекают за (минут):", '_class ->"form-group")	{ (id, name, value, args) =>
-    <input type="number" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control">
-    }	
-	
-	@helper.input(eventForm("dscr"), '_label -> Messages("dscr"), '_class ->"form-group")	{ (id, name, value, args) =>
-    <textarea id="@id" name="@name" class="form-control" placeholder="Введите описание" rows="5" >@value</textarea>
-    }
-    
+			
+	@helper.input(eventForm("date.time"), '_label -> Messages("time"), '_class ->"form-group",'_showConstraints->false){ (id, name, value, args) =>
+		<input type="time" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control form-narrow">
+	}
+			
+	@helper.input(eventForm("bookingExpTime"), '_label -> "Бронирования истекают за (минут):", '_class ->"form-group",'_showConstraints->false)	{ (id, name, value, args) =>
+		<input type="number" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control form-narrow">
+	}	
+	@helper.input(eventForm("dscr"), '_label -> Messages("dscr"), '_class ->"form-group",'_showConstraints->false)	{ (id, name, value, args) =>
+	    <textarea id="@id" name="@name" class="form-control" placeholder="Введите описание" rows="5" >@value</textarea>
+	 }
 
     
