--- a/app/views/events/insert.scala.html
+++ b/app/views/events/insert.scala.html
@@ -5,8 +5,8 @@
 @main("Создание события"){
 	<div class="container">
 		@helper.form(action= routes.Events.insert, 'role->"form", 'class->"form-horizontal"){
-		@helper.input(ev("id"), '_class ->"form-group",'_label->"ID"){ (id, name, value, args) =>
-	    <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control" readonly>
+		@helper.input(ev("id"), '_class ->"form-group",'_label->"ID",'_showConstraints->false){ (id, name, value, args) =>
+	    <input type="text" value="0" name="@name" id="@id" @toHtmlArgs(args) class="form-control form-narrow" readonly>
 	}
 		@views.html.events.eventForm(ev)
 			<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
