pattern matching added to sectorMap

--- a/app/views/seats/sectorMap.scala.html
+++ b/app/views/seats/sectorMap.scala.html
@@ -9,27 +9,23 @@
 			<tr>
 				<td class="success">@(row)</td>
 				@for(seat<-1 to sector.seatsInRow) {
-					<td 
-					class= "@if(orderedSeats
-						exists(s=>s.rowNumber==row&&s.num==seat&&s.sold)){danger}else{
-						@if(orderedSeats
-						exists(s=>s.rowNumber==row&&s.num==seat&&s.booked)){warning}else{info}
-					}">
-						@if(orderedSeats.find(s=>s.rowNumber==row&&s.num==seat&&s.sold).isDefined){
-							<a href = "@routes.Sales.show(Seat.sale(
-								orderedSeats.find(s=>s.rowNumber==row&&s.num==seat&&s.sold).get).id)">
-								@seat
-							</a>
-						}else {
-							@if(orderedSeats.find(s=>s.rowNumber==row&&s.num==seat&&s.booked).isDefined){
-								<a href = "@routes.Bookings.show(Seat.booking(
-									orderedSeats.find(s=>s.rowNumber==row&&s.num==seat&&s.booked).get).id)">
-									@seat
-								</a> 
-							}else{@seat}
-						}													
-					</td>
-				}
+					@orderedSeats.find(s=>s.rowNumber==row&&s.num==seat) match{
+						case None=>{
+							<td class="info">@seat</td>	
+						}
+						case Some(seat)=>{
+							<td class="@if(seat.sold){danger}else{warning}">
+								<a href="@if(seat.sold){
+								@routes.Sales.show(Seat.sale(seat).id)
+								}else{
+									@routes.Bookings.show(Seat.booking(seat).id)
+								}">
+									@seat.num
+								</a>
+							</td>	
+							}
+						}		
+					}
 			</tr>	
 		}
 		</table>
