--- a/app/views/events/details.scala.html
+++ b/app/views/events/details.scala.html
@@ -45,7 +45,7 @@
 		</div>
 	}else{
 		<div class="container">
-			<table class="table table-condensed">
+			<table class="table table-condensed table-responsive table-hover">
 				<tr>
 					<th>Сектор</th>
 					<th>Продано мест</th>
