--- a/app/views/users/userForm.scala.html
+++ b/app/views/users/userForm.scala.html
@@ -3,26 +3,26 @@
 
 		
 		@helper.input(userForm("name"), '_label -> "Логин", '_class ->"form-group",'_showConstraints->false) { (id, name, value, args) =>
-	    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите логин пользователя">
+	    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите логин пользователя" required>
 		}
 		
 		@helper.input(userForm("fullName"), '_label -> "Полное имя", '_class ->"form-group",'_showConstraints->false) { (id, name, value, args) =>
-	    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите имя пользователя">
+	    <input type="text" value="@value"  name="@name" id="@id" @toHtmlArgs(args) class="form-control" placeholder="Введите имя пользователя" required>
 		}		
 		
 		<div class="checkbox">
 			<lavel>
-				<input type = "checkbox" value = "true" id="edEv" name="edEv"  @if(userForm.data("edEv")=="true"){checked}>Может редактировать события
+				<input type = "checkbox" value = "true" id="edEv" name="edEv"  @if(userForm.data.withDefaultValue("false")("edEv")=="true"){checked}>Может редактировать события
 			</lavel>
 		</div>
 		<div class="checkbox">
 			<lavel>
-				<input type = "checkbox" value = "true" id="edS" name="edS" @if(userForm.data("edS")=="true"){checked}>Может редактировать продажи
+				<input type = "checkbox" value = "true" id="edS" name="edS" @if(userForm.data.withDefaultValue("false")("edS")=="true"){checked}>Может редактировать продажи
 			</lavel>
 		</div>
 		<div class="checkbox">
 			<lavel>
-				<input type = "checkbox" value = "true" id="edU" name="edU"  @if(userForm.data("edU")=="true"){checked}>Может редактировать пользователей
+				<input type = "checkbox" value = "true" id="edU" name="edU"  @if(userForm.data.withDefaultValue("false")("edU")=="true"){checked}>Может редактировать пользователей
 			</lavel>
 		</div>
 			<button type="submit" class="bth btn-primary btn-lg">Сохранить</button>
