Not found and BadRequest pages added

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)(implicit flash:Flash, user:Option[User])
+@(title: String)(content: Html)(implicit flash:Flash, user:Option[User]=None)
 
 <!DOCTYPE html>
 
